--- a/zzlove/async.yaml
+++ b/zzlove/async.yaml
@@ -13,3 +13,9 @@ kafka:
     - 192.168.0.121:9092
     - 192.168.0.122:9092
     - 192.168.0.123:9092
+
+info_log:
+  path: /home/work/zzlove/log/asynctask/info.log
+
+exc_log:
+  path: /home/work/zzlove/log/asynctask/exc.log
