--- a/zzlove/comment.yaml
+++ b/zzlove/comment.yaml
@@ -42,3 +42,9 @@ kafka:
     - 192.168.0.121:9092
     - 192.168.0.122:9092
     - 192.168.0.123:9092
+
+info_log:
+  path: /home/work/zzlove/log/comment/info.log
+
+exc_log:
+  path: /home/work/zzlove/log/comment/exc.log
