--- a/zzlove/online.yaml
+++ b/zzlove/online.yaml
@@ -28,3 +28,9 @@ kafka:
     - 192.168.0.121:9092
     - 192.168.0.122:9092
     - 192.168.0.123:9092
+
+info_log:
+  path: /home/work/zzlove/log/online/info.log
+
+exc_log:
+  path: /home/work/zzlove/log/online/exc.log
