--- a/zzlove/remind.yaml
+++ b/zzlove/remind.yaml
@@ -22,3 +22,9 @@ etcd:
     - 192.168.0.121:2379
     - 192.168.0.122:2379
     - 192.168.0.123:2379
+
+info_log:
+  path: /home/work/zzlove/log/remind/info.log
+
+exc_log:
+  path: /home/work/zzlove/log/remind/exc.log
