--- a/zzlove/async.yaml
+++ b/zzlove/async.yaml
@@ -1,5 +1,5 @@
 grpc:
-  addr: 127.0.0.1:9999
+  addr: :9999
   name: asynctask
 
 etcd:
@@ -14,8 +14,7 @@ kafka:
     - 192.168.0.122:9092
     - 192.168.0.123:9092
 
-info_log:
-  path: /home/work/zzlove/log/asynctask/info.log
-
-exc_log:
-  path: /home/work/zzlove/log/asynctask/exc.log
+log_path:
+  info: /home/work/zzlove/log/api/info.log
+  exc: /home/work/zzlove/log/api/exc.log
+  debug: /home/work/zzlove/log/api/debug.log
