--- a/zzlove/api.yaml
+++ b/zzlove/api.yaml
@@ -1,5 +1,5 @@
 grpc:
-  addr: 127.0.0.1:8888
+  addr: :8888
   name: api_service
 
 etcd:
@@ -14,8 +14,7 @@ kafka:
     - 192.168.0.122:9092
     - 192.168.0.123:9092
 
-info_log:
-  path: /home/work/zzlove/log/api/info.log
-
-exc_log:
-  path: /home/work/zzlove/log/api/exc.log
+log_path:
+  info: /home/work/zzlove/log/api/info.log
+  exc: /home/work/zzlove/log/api/exc.log
+  debug: /home/work/zzlove/log/api/debug.log
