--- a/zzlove/feed.yaml
+++ b/zzlove/feed.yaml
@@ -1,23 +1,3 @@
-mysql:
-  host: 192.168.0.121
-  port: 3306
-  user: root
-  db: zzlove
-  password: 7yAZCOMkt23nnIke
-
-slave:
-  host: 192.168.0.122
-  port: 3306
-  user: root
-  db: zzlove
-  password: 7yAZCOMkt23nnIke
-
-mc:
-  addr:
-    - 192.168.0.121:11211
-    - 192.168.0.122:11211
-    - 192.168.0.123:11211
-
 cluster:
   addr:
     - 192.168.0.121:6379
@@ -29,19 +9,13 @@ cluster:
 
 grpc:
   addr: :9001
-  name: user_service
+  name: feed_service
 
 etcd:
   addr:
     - 192.168.0.121:2379
     - 192.168.0.122:2379
     - 192.168.0.123:2379
-
-kafka:
-  addr:
-    - 192.168.0.121:9092
-    - 192.168.0.122:9092
-    - 192.168.0.123:9092
 
 log_path:
   info: /home/work/zzlove/log/api/info.log
