--- a/zzlove/online.yaml
+++ b/zzlove/online.yaml
@@ -14,7 +14,7 @@ cluster:
     - 192.168.0.126:6379
 
 grpc:
-  addr: 127.0.0.1:9006
+  addr: :9006
   name: online_service
 
 etcd:
@@ -29,8 +29,7 @@ kafka:
     - 192.168.0.122:9092
     - 192.168.0.123:9092
 
-info_log:
-  path: /home/work/zzlove/log/online/info.log
-
-exc_log:
-  path: /home/work/zzlove/log/online/exc.log
+log_path:
+  info: /home/work/zzlove/log/api/info.log
+  exc: /home/work/zzlove/log/api/exc.log
+  debug: /home/work/zzlove/log/api/debug.log
